SUBDIRS = resource

EXTRA_DIST = CHANGELOG.txt DEVELOPERS.TXT AUTHORS.txt

bin_PROGRAMS = istatd

istatd_SOURCES = \
	main.h main.cpp \
	conf.h conf.cpp \
	argument.h argument.cpp \
	switchboard.h switchboard.cpp \
	socket.h socket.cpp \
	socketset.h socketset.cpp \
	clientset.h clientset.cpp \
	isr.h isr.cpp \
	daemon.h daemon.cpp \
	stats.h stats.cpp \
	token.h token.cpp \
	utility.h utility.cpp \
	system.c
